# Onyx-Hacking

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: ci.yml
plans/: hacking-etico-dev-plan.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_init.sql  002_project_engagement.sql  003_audit_log.sql
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs  scanner.rs
src/components/branding/: OnyxOwlMark.tsx  PulsoAiBadge.tsx
src/components/dashboard/: DashboardModule.tsx
src/components/exploit/: ExploitModule.tsx
src/components/layout/: Sidebar.tsx  StatusBar.tsx  TerminalPanel.tsx
src/components/legal/: LegalDisclaimer.tsx
src/components/post/: PostModule.tsx
src/components/recon/: ReconModule.tsx
src/components/report/: ReportModule.tsx
src/components/settings/: SettingsPanel.tsx
src/components/shared/: ToastContainer.tsx  VulnDetailModal.tsx
src/components/vuln/: VulnModule.tsx
src/hooks/: useKeyboardShortcuts.ts  useToast.ts
src/lib/: reportHtml.ts
src/store/: onyx.ts
src/styles/: globals.css
src/types/: index.ts
